# MinicraftSDL

./: .gitignore  CMakeLists.txt  Makefile  README.md  game.c  game.h  icons.rimg
gfx/: color.c  color.h  font.c  screen.c  screen.h  spritesheet.h
item/resource/: food_resource.c  plantable_resource.c  plantable_resource.h  resource.c
level/: level.c  level.h
level/levelgen/: levelgen.c  levelgen.h
level/tile/: cactus_tile.c  cactus_tile.h  cloud_cactus_tile.c  cloud_cactus_tile.h  cloud_tile.c  dirt_tile.c  farmland.c  flower_tile.c  flower_tile.h  grass_tile.c  grass_tile.h  hard_rock_tile.c  hard_rock_tile.h  hole_tile.c  hole_tile.h  infinite_fall_tile.c  lava_tile.c  lava_tile.h  ore_tile.c  ore_tile.h  rock_tile.c  sand_tile.c  sand_tile.h  sapling_tile.c  sapling_tile.h  stairs_tile.h  staits_tile.c  tile.c  tile.h  tree_tile.c  tree_tile.h  water_tile.c  water_tile.h  wheat_tile.c
screen/: about_menu.c  instructions_menu.c  list_item.h  menu.c  menu.h  title_menu.c
source/: CMakeLists.txt  Makefile.nspire  crh.py  game.c  game.h  game2.h  icons.c  icons.h  inputhandler.c  inputhandler.h  minicraft-sdl.elf  minicraft-sdl.elf.id0  minicraft-sdl.elf.id1  minicraft-sdl.elf.id2  minicraft-sdl.elf.nam  minicraft-sdl.elf.til
source/crafting/: crafting.c  crafting.h  recipe.c  recipe.h  recipeids.h
source/entity/: _entity_caller.c  _entity_caller.h  _player.h  airwizard.c  airwizard.h  anvil.c  anvil.h  chest.c  chest.h  entity.c  entity.h  entityid.h  furnace.c  furnace.h  furniture.c  furniture.h  inventory.c  inventory.h  itementity.c  itementity.h  lantern.c  lantern.h  mob.c  mob.h  oven.c  oven.h  player.c  player.h  slime.c  slime.h  spark.c  spark.h  workbench.c  workbench.h  zombie.c  zombie.h
source/entity/particle/: smashparticle.c  smashparticle.h  textparticle.c  textparticle.h
source/gfx/: color.c  color.h  font.c  font.h  screen.c  screen.h  sprite.h  spritesheet.c
source/item/: furniture_item.c  furniture_item.h  item.c  item.h  itemids.h  powergloveitem.c  powergloveitem.h  resourceitem.c  resourceitem.h  tool_item.c  tool_item.h  tooltype.c  tooltype.h
source/item/resource/: food_resource.c  food_resource.h  plantable_resource.c  plantable_resource.h  resource.c  resource.h
source/level/: level.c  level.h
source/level/levelgen/: levelgen.c
source/level/tile/: cactus_tile.c  cactus_tile.h  cloud_cactus_tile.c  cloud_cactus_tile.h  cloud_tile.c  dirt_tile.c  farmland.c  flower_tile.c  flower_tile.h  grass_tile.c  hard_rock_tile.c  hard_rock_tile.h  hole_tile.c  hole_tile.h  infinite_fall_tile.c  lava_tile.c  ore_tile.c  ore_tile.h  rock_tile.c  sand_tile.c  sand_tile.h  sapling_tile.c  sapling_tile.h  stairs_tile.c  stairs_tile.h  staits_tile.c  tile.c  tile.h  tileids.h  tree_tile.c  tree_tile.h  water_tile.c  wheat_tile.c
source/screen/: about_menu.c  about_menu.h  container_menu.c  container_menu.h  crafting_menu.c  crafting_menu.h  dead_menu.c  dead_menu.h  instructions_menu.c  instructions_menu.h  inventory_menu.h  inventorymenu.c  level_transition_menu.c  level_transition_menu.h  menu.c  menu.h  title_menu.c  title_menu.h  won_menu.c  won_menu.h
source/sound/: sound.c  sound.h
source/utils/: arraylist.c  arraylist.h  javarandom.c  javarandom.h  utils.c  utils.h
utils/: javarandom.c  javarandom.h  utils.c  utils.h
